package tecton;

import mushroom.MushroomStem;

public class StemlessTecton  extends Tecton {

    @Override
    public boolean add(MushroomStem ms) {
        return false;
    }
}
