@startuml tecton

Tecton *-- "0..*" Mushroom
Tecton *-- "0..*" Insect
Tecton o-- "0..*" Tecton
class Tecton implements OnRound, IMushroom{
    neighbours : List<Tecton>
    mushrooms : List<Mushroom>
    addInsect(i : Insect) : void
}

class StemlessTecton extends Tecton {}
class ThreadConsumingTecton extends Tecton {}
class SingleThreadedTecton extends Tecton {}
@enduml